
[TestPane_View_NoLayer - 1]
╭────────────────────────────────────────────────╮
│Layer Details                                   │
│                                                │
│No details                                      │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
---

[TestPane_View_WithLayer - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layer Details                                                                 │
│                                                                              │
│Tags: (unavailable)                                                           │
│Id: 28cfe03618aa2e914e81fdd90345245c15f4478e35252c06ca52d238fd3cc694          │
│Size: 1.1 MB                                                                  │
│Digest: sha256:23bc2b70b2014dec0ac22f27bb93e9babd08cdd6f1115d0c955b9ff22b38...│
│Command:                                                                      │
│#(nop) ADD                                                                    │
│file:ce026b62356eec3ad1214f92be2c9dc063fe205bd5e600be3492c4dfb17148bd in /    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_Focused - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layer Details                                                                 │
│                                                                              │
│Tags: (unavailable)                                                           │
│Id: 28cfe03618aa2e914e81fdd90345245c15f4478e35252c06ca52d238fd3cc694          │
│Size: 1.1 MB                                                                  │
│Digest: sha256:23bc2b70b2014dec0ac22f27bb93e9babd08cdd6f1115d0c955b9ff22b38...│
│Command:                                                                      │
│#(nop) ADD                                                                    │
│file:ce026b62356eec3ad1214f92be2c9dc063fe205bd5e600be3492c4dfb17148bd in /    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SmallWidth - 1]
╭────────────────────────────╮
│Layer Details               │
│                            │
│Tags: (unavailable)         │
│Id:                         │
│28cfe03618aa2e914e81fdd90345│
│245c15f4478e35252c06ca52d238│
│fd3cc694                    │
│Size: 1.1 MB                │
│Digest: sha256:23bc2b70b2...│
│Command:                    │
│#(nop) ADD                  │
│...e3492c4dfb17148bd in...  │
│                            │
╰────────────────────────────╯
---

[TestPane_View_SmallHeight - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layer Details                                                                 │
│                                                                              │
│Tags: (unavailable)                                                           │
│Id: 28cfe03618aa2e914e81fdd90345245c15f4478e35252c06ca52d238fd3cc694          │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_LargeSize - 1]
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Layer Details                                                                                                         │
│                                                                                                                      │
│Tags: (unavailable)                                                                                                   │
│Id: 28cfe03618aa2e914e81fdd90345245c15f4478e35252c06ca52d238fd3cc694                                                  │
│Size: 1.1 MB                                                                                                          │
│Digest: sha256:23bc2b70b2014dec0ac22f27bb93e9babd08cdd6f1115d0c955b9ff22b382f5a                                       │
│Command:                                                                                                              │
│#(nop) ADD file:ce026b62356eec3ad1214f92be2c9dc063fe205bd5e600be3492c4dfb17148bd in /                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_Update_WithLayoutMsg - 1]
╭────────────────────────────────────────────────╮
│Layer Details                                   │
│                                                │
│Tags: (unavailable)                             │
│Id:                                             │
│28cfe03618aa2e914e81fdd90345245c15f4478e35252c06│
│ca52d238fd3cc694                                │
│Size: 1.1 MB                                    │
│Digest: sha256:23bc2b70b2014dec0ac22f27bb93e9...│
╰────────────────────────────────────────────────╯
---
